syntax = "proto3";
package babylon.checkpointing.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "cosmos/crypto/ed25519/keys.proto";
import "babylon/checkpointing/params.proto";
import "babylon/checkpointing/bls_key.proto";

option go_package = "github.com/babylonchain/babylon/x/checkpointing/types";

// GenesisState defines the checkpointing module's genesis state.
message GenesisState {
  // params defines all the paramaters of related to checkpointing
  Params params = 1 [(gogoproto.nullable) = false];

  repeated GenesisKey genesis_keys = 2;
}

message GenesisKey {
  // validator_address is the address corresponding to a validator
  string validator_address = 1;

  // bls_key defines the BLS key of the validator at genesis
  BlsKey bls_key = 2;

  // val_pubkey defines the ed25519 public key of the validator at genesis
  cosmos.crypto.ed25519.PubKey val_pubkey = 3;
}
